Revision history for Perl extension Catalyst::Plugin::Authentication

0.10012 Sat Jun  6 10:58:43 BST 2009
      - Add Catalyst::Authentication::Credential::Remote which authenticates you
        directly from environment variables passed by your web server. This
        allows the use of SSL client certificates, NTLM, or just basic/digest
        auth done at the web server level to be used to authenticate users
        to your Catalyst application (kmx)
        - Tests for this
      - Change ->config invocations to be best practices (t0m)
      - Note about session auto-vification even when use_session is set
        to false (robert).
      - Note about how a realms key used to be needed to unconfuse people
        running an old version, but browsing the docs on search.cpan (ruoso)

0.10011 Sun Mar  8 23:32:12 GMT 2009
      - Update t/live_app_session.t to skip unless you have a newer, more
        reliable version of TWMC (RT#43817)
      - Change check for isa Catalyst::Plugin::Session to just check the
        existance of a session method. (Edmund von der Burg)

0.10010
      - Change from NEXT to MRO::Compat
      - Chop a number off the versions to get back to the correct 0.10000
        version scheme.

0.100092_01
      - Add hook for failing user restore.
        - Add test for this.
      - Fix bug in Credential::Password with password_type: clear.
        - Add test for this.
      - Add mock object tests for Credential::Password with password_type: 
        clear.

0.100092
      - Release new version, no changes since dev release.     

0.10009_01
      - Fix POD escaping, from RT#38694 (Luke Ross)
      - Change authentication backwards compatibility handling to not rely on
        Class::Data::Inheritable side effects, and so be Catalyst 5.80 safe 
        (t0m)

0.10009 2008-11-27
        - Including progressive realm for multiple authentication attempts
          in a single request.

0.10008 2008-10-23